# practicas_robots_moviles

./: README.md
seg_tray/: CMakeLists.txt  package.xml
seg_tray/config/: corr_params.yaml  nav_params.yaml
seg_tray/launch/: corr_nav_launch.py  nav_p2p_launch.py
seg_tray/scenes/: corridor_scene.ttt  p2p_scene.ttt
seg_tray/src/: corr_nav.cpp  nav_p2p.cpp
